# DungeonDocs

./: .gitignore  README.md  TERMINOLOGY_UPDATE_SUMMARY.md  WIKI_PROJECT_SPEC.md  convert_dungeon_docs.bat  dev.bat  dungeondocs-formatting-guide-equipment.md  dungeondocs-formatting-guide-feats.md  dungeondocs-formatting-guide-magic-items.md  dungeondocs-formatting-guide-spells.md  dungeondocs-formatting-guide.md  dungeondocs-species-formatting-guide.md  mkdocs.yml  og_meta_plugin.py  pyproject.toml  requirements.txt  serve_dungeon_docs.bat  temp_sample.txt  temp_sample2.txt
data/: dd-5e-spell-component-database.csv  format_failures.json  item_format_failures.json  item_format_warnings.csv  item_scaling_items.csv  item_sources.csv  spell_sources.csv  spells_missing_material_components.txt
docs/: chapter-references-table.html  chapter-references-table.md  index.md
dungeondocs.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
items_formatted/: adamantine-armor.md  adamantine-weapon.md  adventurer-s-ring.md  alchemy-jug.md  ammunition-1-2-or-3.md  ammunition-of-slaying.md  amulet-of-health.md  amulet-of-proof-against-detection-and-location.md  amulet-of-the-planes.md  animated-shield.md  apparatus-of-kwalish.md  arcane-battery.md  armor-1-2-or-3.md  armor-of-gleaming.md  armor-of-invulnerability.md  armor-of-resistance.md  armor-of-vulnerability.md  arrow-catching-shield.md  axe-of-the-dwarvish-lords.md  baba-yaga-s-dancing-broom.md  bag-of-beans.md  bag-of-devouring.md  bag-of-holding.md  bag-of-tricks.md  bead-of-force.md  blackrazor.md  (+356 more)
(+4507 files in other folders)
