[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dungeondocs"
version = "0.1.0"
description = "D&D reference site (MkDocs + og-meta plugin)"
readme = "README.md"
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "pytest",
]

[project.entry-points."mkdocs.plugins"]
og_meta_plugin = "og_meta_plugin:OgMetaPlugin"

[tool.setuptools]
py-modules = ["og_meta_plugin"]
